# bitcoiin

./: .gitignore  .gitmodules  Cargo.toml  README.md  boot.dol  boot.elf  build.sh  ntgbtminer.py  powerpc-unknown-eabi.json
assets/: Wii-Cursor.tga
c/: Makefile  Tutorial.pnproj  Tutorial.pnps
c/source/: main.c
rust/: build.rs  build.sh
rust/src/: main.rs
src/: display.rs  main.rs
