[package]
name = "bitcoiin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "indigo"
path = "src/main.rs"

[profile]
dev = { panic = "abort" }
release = { panic = "abort", lto = true, codegen-units = 1, strip = "symbols", opt-level = "s" }

[dependencies]
serde = { version = "1.0.217", default-features = false, features = ["alloc"] }

[dependencies.ogc-rs]
git = "https://github.com/rust-wii/ogc-rs.git"
features = ["ffi"]
